fixed spacing and padding

--- a/Thrive TakeHome/main.css
+++ b/Thrive TakeHome/main.css
@@ -52,9 +52,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 97vh;
+  height: 90vh;
   top: 50%;
   left: 50%;
+  padding: 50px;
 }
 
 .first-cat-container {
@@ -64,7 +65,7 @@ body {
   align-items: center;
   width: 50%;
   height: 90vh;
-  margin-right: 40px;
+  margin-right: 50px;
 }
 
 .second-cat-container {
@@ -96,7 +97,7 @@ body {
 img {
   object-fit: cover;
   width: 100%;
-  height: 40vh;
+  height: 45vh;
 }
 
 #first-cat-origin {
@@ -113,8 +114,8 @@ img {
 
 #first-cat-description,
 #second-cat-description {
-  font-size: 19px;
-  margin-bottom: 40px;
+  font-size: 16px;
+  line-height: 1.5em;
 }
 
 #first-cat-wiki-button {
@@ -156,14 +157,12 @@ img {
     margin-right: 40px;
     width: 100%;
     height: 70vh;
-    padding-bottom: 40px;
   }
 
   .second-cat-container {
     width: 100%;
     flex-direction: column-reverse;
     height: 70vh;
-    padding-bottom: 40px;
   }
 
   .first-cat-info,
